# django_library_project_test

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
django_library_project_test/: asgi.py  settings.py  urls.py  wsgi.py
http/: api.http  author.http  books.http  reader.http
